--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Solution to GAN integrity challenge",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "mocha"
   },
   "repository": {
@@ -17,7 +18,8 @@
   },
   "homepage": "https://github.com/LordRahl90/cities-solution#readme",
   "devDependencies": {
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
